# JDBotLogsEmbed

./: LICENSE  README.md  main.py  pinned.txt  pyproject.toml  requirements.txt
cogs/: test.py
