[tool.poetry]
name = "jdbotlogsembed"
version = "0.1.0"
description = ""
authors = ["JDJG"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
discord-py = {git = "https://github.com/Rapptz/discord.py"}
jishaku = {git = "https://github.com/Gorialis/jishaku"}
python-dotenv = ">=1.0.1"
humanize = ">=4.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
